[package]
name = "pyr"
version = "0.0.0"
edition = "2021"
authors = ["AribYadi <aribyadi@gmail.com>"]
description = "Python but it is not python."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AribYadi/pyr.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
line-col = "0.2.1"
logos = "0.12.0"
snailquote = "0.3.1"
thiserror = "1.0.31"
llvm-sys = "140"

[dev-dependencies]
unindent = "0.1.9"
