[package]
name = "pyr"
version = "0.0.0"
edition = "2021"
authors = ["AribYadi <aribyadi@gmail.com>"]
description = "Python but it is not python."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AribYadi/pyr.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line-col = "0.2.1"
logos = "0.12.0"
thiserror = "1.0.31"
llvm-sys = "140"
once_cell = "1.12.0"
seq-macro = "0.3.0"
libloading = "0.7.3"
c_vec = "2.0.0"

[dev-dependencies]
unindent = "0.1.9"

[profile.release]
lto = "fat"
codegen-units = 1
# passes = ["instcombine", "reassociate", "gvn", "simplifycfg", "basic-aa", "argpromotion", "instcombine", "reassociate"]

[features]
# A "flag" that disable seq macro for performance of clippy
clippy = []
